--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -158,14 +158,17 @@ Keywords: bias, causal model, clinical trial, confounding/collapsibility, observ
 
 ### 調整すべき因子かどうかってどうやって見分けるの？
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「まだ話は続くよ。ここからの話題はDAGと確率変数の関係について。まず、確率の基本について思い出してみよう」
+:::
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **確率の復習**
+::: {.callout-note appearance="simple"  title="確率の復習"}
 
 **同時確率と条件付確率**
 
-複数の事象を扱うとき、事象が同時に起こる確率（同時確率）と、順番に起こる確率（条件付確率）を区別することが大切です。たとえば2種類の事象AとBがあったとしましょう。「AまたはBが起きる」という事象は、和集合$A\cup{B}$で表します。「AかつBが起きる」という事象は、積集合$A\cap{B}$で表します。
+複数の事象を扱うとき、**事象が同時に起こる確率（同時確率**）と、**順番に起こる確率（条件付確率）**を区別することが大切です。たとえば2種類の事象AとBがあったとしましょう。「AまたはBが起きる」という事象は、和集合$A\cup{B}$で表します。「AかつBが起きる」という事象は、積集合$A\cap{B}$で表します。
 
 ![](causal-inference-3-1)
 
@@ -192,27 +195,51 @@ $\mathrm{Pr}(A\cap{B})=\mathrm{Pr}(A)\mathrm{Pr}(B)$
 $\mathrm{Pr}(A\cap{B}|C)=\mathrm{Pr}(A|C)\mathrm{Pr}(B|C)$
 :::
 
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「準備が整ったので、DAGと確率変数の関係について説明しよう」
+:::
 
-**私「ふむふむ」**
+::: voice-daughter
+私「ふむふむ」
+:::
 
+::: voice-father
 お父さん「Aの確率分布がBに依存することを、矢印で表すことにする。つまり、Bで条件付けたAの確率は、B→Aで表される。逆に、AとBが独立なら、矢印はない。このルールを使えば、DAGを条件付確率と対応付けることができそうでしょ。そうすると独立性や相関性について考えることができる」
+:::
 
-**私「確率分布って正規分布とかそういうの？」**
+::: voice-daughter
+私「確率分布って正規分布とかそういうの？」
+:::
 
+::: voice-father
 お父さん「そうきたか。えっとね、正規分布は条件付確率じゃない。でも、たとえばロジスティック回帰だったら、条件付確率を表すから、それをイメージしてもいい。ここでは具体的な確率分布を意図しているわけじゃなくて、もっと定性的で、一般的な話をしてるんだけどね」
+:::
 
-**私「ふーん」**
+::: voice-daughter
+私「ふーん」
+:::
 
+::: voice-father
 お父さん「確率変数によって別の確率変数が影響を受けるためには、なんらかの関連が必要だよね」
+:::
 
-**私「そりゃそうだ」**
+::: voice-daughter
+私「そりゃそうだ」
+:::
 
+::: voice-father
 お父さん「統計学では、一般に、それは条件付確率だったり、相関だったりする。一方で、DAGではそれをグラフ上の有向パスで表している。胃がんの例で用いたDAGに、このルールを適用してみてよ。たとえばAからDに入る矢印はないでしょ。このことは、A以外の変数であるB、C、Eで条件付けると、DはAと独立という意味になる」
+:::
 
-**私「えーっと、Aは性格、Dは胃がん発生だっけ。年齢も、体質も、ピロリ菌除菌の有無も同じだったら、性格に関係なく、胃がんリスクは等しいと仮定しているって意味なのかな？」**
+::: voice-daughter
+私「えーっと、Aは性格、Dは胃がん発生だっけ。年齢も、体質も、ピロリ菌除菌の有無も同じだったら、性格に関係なく、胃がんリスクは等しいと仮定しているって意味なのかな？」
+:::
 
+::: voice-father
 お父さん「そういうこと。次に、DAG全体について考えてみてよ。さっきのグラフでは、AからB、BからA、AからD、BからEへの矢印はないよね。このことは、AはBに直接影響せず、BはAに直接影響せず、AはDに直接影響せず、BはEに直接影響しないという仮定を表している。もっといえば、これは、さらに、AがBを介して伝わるDへの効果はない、という意味にもなる。このような依存関係を条件付分布で表すと、以下の5つの式のようになる。これがさっきのDAGに対応する確率分布だよ」
+:::
 
 $\mathrm{Pr}(A|B,C,D,E)=\mathrm{Pr}(A)$
 
@@ -224,30 +251,50 @@ $\mathrm{Pr}(D|A,B,C,E)=\mathrm{Pr}(D|B,C,E)$
 
 $\mathrm{Pr}(E|A,B,C,D)=\mathrm{Pr}(E|A,C)$
 
-**私「ふーん。なんだか具体性がなくて、それでって思っちゃうよ。話の終着点がみえない」**
+::: voice-daughter
+私「ふーん。なんだか具体性がなくて、それでって思っちゃうよ。話の終着点がみえない」
+:::
 
+::: voice-father
 お父さん「そっか。ここまでの話ではね、DAGと条件付確率を対応付けるルールを説明したかったんだ。簡単にいうと、条件付けの方の変数から、条件を付けられる変数の方に、矢印が入るようなルールで、DAGと条件付確率を結びつけることができる。このルールを踏まえて、合流点の意味を考えてみてよ。この図でEとDに相関はある？相関はない？」
+:::
 
 ![](causal-inference-3-4)
 
-**私「じゃあもうちょっとだけ話に付き合ってあげる。うーんと。この図にはE→CとD→Cがある。これって、**$\mathrm{Pr}(C|D,E)$って意味だっけ？」
+::: voice-daughter
+私「じゃあもうちょっとだけ話に付き合ってあげる。うーんと。この図にはE→CとD→Cがある。これって、**$\mathrm{Pr}(C|D,E)$って意味だっけ？」
+:::
 
+::: voice-father
 お父さん「そうだったね」
+:::
 
-**私「さらに、EとDに入る矢印はない。つまり、CとDとEの確率分布は、それぞれ**$\mathrm{Pr}(C|D,E)$と$\mathrm{Pr}(D)$と$\mathrm{Pr}(E)$ってことになる。でもここからがわかんないな」
+::: voice-daughter
+私「さらに、EとDに入る矢印はない。つまり、CとDとEの確率分布は、それぞれ**$\mathrm{Pr}(C|D,E)$と$\mathrm{Pr}(D)$と$\mathrm{Pr}(E)$ってことになる。でもここからがわかんないな」
+:::
 
+::: voice-father
 お父さん「確率の復習で述べた同時分布と条件付確率の関係を思い出してみて。同時確率は、$\mathrm{Pr}(C,E,D)=\mathrm{Pr}(C|D,E)\mathrm{Pr}(D)\mathrm{Pr}(E)$と表されるでしょ。この式がポイントなんだ。これって、EとDは独立という意味でしょ」
+:::
 
-**私「うん。確率分布が積で書けてるからね」**
+::: voice-daughter
+私「うん。確率分布が積で書けてるからね」
+:::
 
+::: voice-father
 お父さん「さらに、この図は、最初に示した合流点の図とは違って、E→Dはない。つまり、曝露変数とアウトカムに因果関係はない状況を想定したものといえる。っていうことはさ。Cについてなにも操作しなくても、EとDに相関があれば因果関係があるし、相関がなければ因果関係はないってことになるでしょ。相関があるかどうかは、曝露変数EとアウトカムDのデータを集めれば、確認できるよね」
+:::
 
-**私「なんとなくいいたいことがわかってきた。この図みたいにCが合流点だったら、調整なんかせずにEとDの相関を調べればいいってことね」**
+::: voice-daughter
+私「なんとなくゴールが見えてきた。この図みたいにCが合流点だったら、調整なんかせずにEとDの相関を調べればいいってことね」
+:::
 
-お父さん「簡単にいうとそういうこと。合流点があると、変数間の相関関係がトリッキーになるんだ」
+::: voice-father
+お父さん「簡単にいうとそういうこと。**合流点があると、変数間の相関関係がトリッキーになる**んだ」
+:::
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **合流点の性質**
+::: {.callout-note appearance="simple"  title="合流点の性質"}
 
 **合流点を含むパスは相関を生じさせない**
 
@@ -271,7 +318,7 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 
 **まとめ**
 
-この表は、原因から結果までのパスを、有向か無向か、合流点をいくつ含んでいるかに従って、4分類して、パスの性質を整理したものです。すでに述べたように、調整するかどうか検討の候補になるのは、原因から結果までの無向パスです。もし、無向パスが合流点を含まないなら、パス上のどこかの変数を調整しない限り、そのパスはブロックされません。言い換えると、パス上の変数を調整し、このパスをブロックすることで、バイアスを防ぐことができるかもしれません。無向パスが合流点を1つ含むとき、調整しなくてもこのパスは合流点でブロックされますが、合流点のみを調整すると、ブロックが解けてしまいます。ただし、非合流点を調整すると、合流点を調整したとしても、そのパスはブロックされます。合流点を1つ以上含む場合も、考え方は同じです。調整していない合流点があるか、非合流点を調整すると、このパスはブロックされます。しかし、すべての合流点のみを調整すると、ブロックが解けてしまいます。
+この表は、原因から結果までのパスを、有向か無向か、合流点をいくつ含んでいるかに従って、4分類して、パスの性質を整理したものです。すでに述べたように、調整するかどうか検討の候補になるのは、原因から結果までの無向パスです。もし、無向パスが**合流点を含まないなら、パス上のどこかの変数を調整しない限り、そのパスはブロックされません**。言い換えると、パス上の変数を調整し、このパスをブロックすることで、バイアスを防ぐことができるかもしれません。無向パスが**合流点を1つ含むとき、調整しなくてもこのパスは合流点でブロックされます**が、**合流点のみを調整すると、ブロックが解けてしまいます**。ただし、非合流点を調整すると、合流点を調整したとしても、そのパスはブロックされます。合流点を1つ以上含む場合も、考え方は同じです。調整していない合流点があるか、非合流点を調整すると、このパスはブロックされます。しかし、すべての合流点のみを調整すると、ブロックが解けてしまいます。
 
 |   | 調整しないとき | パス上の変数を調整したとき |
 |------------------------|------------------------|------------------------|
@@ -320,13 +367,15 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 結論をいうと、パスE←A→C←B→Dをブロックするため、Cに加えて、AまたはBを調整する必要があります。
 :::
 
+### 文献
 
+- Greenland S, Pearl J, Robins JM. Causal diagrams for epidemiologic research. Epidemiology 1999;10(1):37-48
 
 ### エピソード、用語集
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
 - [Common Causes and Confounders](causal-inference-2.html)
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
-- [Backdoor Paths and Confounders](causal-inference-4.html)
+- [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias](causal-inference-4.html)
 
 - [Statistical Terms in Plain Language](glossary.html)
