--- a/jp/publish-a-paper-3.qmd
+++ b/jp/publish-a-paper-3.qmd
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Publish a Paper − A Morning Just Before Submission
+# Publish a Paper III − A Morning Just Before Submission
 
 ------------------------------------------------------------------------
 
