--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -262,7 +262,7 @@ $\mathrm{Pr}(E|A,B,C,D)=\mathrm{Pr}(E|A,C)$
 ![](causal-inference-3-4)
 
 ::: voice-daughter
-私「じゃあもうちょっとだけ話に付き合ってあげる。うーんと。この図にはE→CとD→Cがある。これって、**$\mathrm{Pr}(C|D,E)$って意味だっけ？」
+私「じゃあもうちょっとだけ話に付き合ってあげる。うーんと。この図にはE→CとD→Cがある。これって、$\mathrm{Pr}(C|D,E)$って意味だっけ？」
 :::
 
 ::: voice-father
@@ -270,7 +270,7 @@ $\mathrm{Pr}(E|A,B,C,D)=\mathrm{Pr}(E|A,C)$
 :::
 
 ::: voice-daughter
-私「さらに、EとDに入る矢印はない。つまり、CとDとEの確率分布は、それぞれ**$\mathrm{Pr}(C|D,E)$と$\mathrm{Pr}(D)$と$\mathrm{Pr}(E)$ってことになる。でもここからがわかんないな」
+私「さらに、EとDに入る矢印はない。つまり、CとDとEの確率分布は、それぞれ$\mathrm{Pr}(C|D,E)$と$\mathrm{Pr}(D)$と$\mathrm{Pr}(E)$ってことになる。でもここからがわかんないな」
 :::
 
 ::: voice-father
@@ -374,7 +374,7 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 ### エピソード、用語集
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
-- [Common Causes and Confounders](causal-inference-2.html)
+- [A Subtle Distinction between Common Causes and Confounders](causal-inference-2.html)
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias](causal-inference-4.html)
 
