--- a/jp/publish-a-paper-2.qmd
+++ b/jp/publish-a-paper-2.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Three Tips for Writing a Paper"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,112 +134,195 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Publishing a paper II
+
+# Publish a Paper II − Three Tips for Writing a Paper
+
 ::: serif-block
-　　　　　　　　　　　　　　　　　　　　Keywords: paper writing
+Keywords: language/writing
 :::
 
 ------------------------------------------------------------------------
 
 ### 論文を書くときの3つのアドバイス
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「この前はピアレビューの仕組みについて話してくれたけど、次は論文の書き方を教えてよ」
+:::
 
-**私「この前はピアレビューの仕組みについて話してくれたけど、次は論文の書き方を教えてよ」**
-
+::: voice-father
 お父さん「いいよ。じゃあ最初のアドバイスはこれ」
+:::
 
 -   図表を作ってメッセージを決める
 
+::: voice-father
 お父さん「この前みせた抄録を、もう一度通して読んでみてよ。冒頭から結論まで、余計なことを書かず、ひとつのテーマに沿って書かれてない？」
+:::
 
-**私「ほんとだ」**
+::: voice-daughter
+私「ほんとだ」
+:::
 
+::: voice-father
 お父さん「これは論文全体を書くときのコツでもある。読者になにを伝えたいかをひとつに絞っておくってこと」
+:::
 
-**私「そうね。”Further support for employment is necessary”、つまりストーマ保有者は再就職が難しいから、さらなる就労支援が求められることを伝えてる文章になってる。ってことは、テーマっていうか、読者へのメッセージをひとつ決めなさいっていいたいのね」**
+::: voice-daughter
+私「そうね。”Further support for employment is necessary”、つまりストーマ保有者は再就職が難しいから、さらなる就労支援が求められることを伝えてる文章になってる。ってことは、テーマっていうか、読者へのメッセージをひとつ決めなさいっていいたいのね」
+:::
 
+::: voice-father
 お父さん「うん、メッセージっていってもいい。でもね、論文なんだから、データに基づくことしか主張できないでしょ。だから、論文を書き始めるときは、論文に載せる図表を作ることから手をつけるといいよ。データからどこまでのことがいえるか、図表をみながらメッセージを決めると、文章を書くときの目標がはっきりするんじゃないかな」
+:::
 
-**私「図表ねえ。まだ2個しかないよ。背景因子と復職率の表しか」**
+::: voice-daughter
+私「図表ねえ。まだ2個しかないよ。背景因子と復職率の表しか」
+:::
 
+::: voice-father
 お父さん「一部じゃなくて、すべての図表をセットで作っておいた方がいい。どうしてかっていうと、解析結果のバージョン管理がしやすくなるから」
+:::
 
-**私「どういうこと？必要になったらそのときに図表を作るのじゃだめなの？」**
+::: voice-daughter
+私「どういうこと？必要になったらそのときに図表を作るのじゃだめなの？」
+:::
 
+::: voice-father
 お父さん「図表を固定できるなら困らないんだけどね。データの扱いや統計手法の細かい違いで、同じような図表を作ることになりがちで、なかなか固定できないものなんだ。もちろん、いい結果が出るようにいろんな解析を試すっていう意味じゃないよ。載せる図表をひとまとめにしてセットにした方が、どのデータセットでいつ作ったかとか、管理しやすいでしょ。そういうこと」
+:::
 
-**私「じゃあ、とりあえず図表作成から始めるか」**
+::: voice-daughter
+私「じゃあ、とりあえず図表作成から始めるか」
+:::
 
+::: voice-father
 お父さん「投稿規定にいくつ図表を載せられるか書いてあるから、確認してね。きっと図表を作る過程で、足りない図表を追加したり、図表を取捨選択したりすると思うんだ。そうしていくうちにメッセージも洗練されていくはず」
+:::
 
-**私「図表を作ってメッセージを決めるっていうけど、いうほど簡単じゃなくない？私に説得力のあるメッセージが書けるかな」**
+::: voice-daughter
+私「図表を作ってメッセージを決めるっていうけど、いうほど簡単じゃなくない？私に説得力のあるメッセージが書けるかな」
+:::
 
+::: voice-father
 お父さん「説得力か。それはメッセージだけの問題じゃないよね。主張の裏付けは確かかどうかだもの。二つ目にこんなアドバイスをしようと思ってた」
+:::
 
 -   研究の限界を考察して説得力を高める
 
+::: voice-father
 お父さん「メッセージを考えるときに、批判的な視点を取り入れてみたらどうかな」
+:::
 
-**私「批判的っていうのは、エディターとかレビュワーの視点っていう意味？批判的吟味って言葉は聞いたことあるけど」**
+::: voice-daughter
+私「批判的っていうのは、エディターとかレビュワーの視点っていう意味？批判的吟味って言葉は聞いたことあるけど」
+:::
 
+::: voice-father
 お父さん「そんな感じ。査読でどんなコメントがきそうか、予想することはよくあるよ。データの欠点についてどんな指摘がきそうか、統計手法につっこみはこないか、結果からロジカルに主張を導けてるか、とかね。思考の積み重ねが説得力を高めるんじゃないかな」
+:::
 
-**私「じゃあさ、どの程度の欠点だったら許される？どのくらいのクオリティが要求されてるかわかんないんだよね」**
+::: voice-daughter
+私「じゃあさ、どの程度の欠点だったら許される？どのくらいのクオリティが要求されてるかわかんないんだよね」
+:::
 
+::: voice-father
 お父さん「それは一概にはいえない。たとえば結論の価値が高いなら、多少の欠点があっても採択したくなる。別の研究の二番煎じだったり、新規性が感じられなかったりする論文は、載せる価値がないって思っちゃう。そうだなあ。データがらみで一発リジェクトにしそうな理由って、診断方法が不正確なケースや、測定しておくべきデータがとられていないケースくらいじゃない？それ以外には、統計解析が間違っていたり、解析結果に明らかにバイアスが生じていたり、著者の論理が一貫しないってケースもあるかな」
+:::
 
-**私「一発リジェクトじゃないってことは、メジャーリビジョンってこと？」**
+::: voice-daughter
+私「一発リジェクトじゃないってことは、メジャーリビジョンってこと？」
+:::
 
+::: voice-father
 お父さん「そういうこと。研究の弱みについて、著者はどう考えているか確認する必要があるし、バイアスがあっても、統計解析を工夫したり感度解析で対処できることも多い。でも、その結果が論文に示されていないだけかもしれないからね」
+:::
 
-**私「ふーん。それって臨床試験でも同じなの？臨床試験は、どんな解析をするか、がちがちに決まっているんじゃなかったっけ。統計解析計画書っていう文書をつくるって聞いたことがあるよ。感度解析を追加しても許されるのかな」**
+::: voice-daughter
+私「ふーん。それって臨床試験でも同じなの？臨床試験は、どんな解析をするか、がちがちに決まっているんじゃなかったっけ。統計解析計画書っていう文書をつくるって聞いたことがあるよ。感度解析を追加しても許されるのかな」
+:::
 
-お父さん**「**そこは柔軟に考えないといけない。計画外の解析結果を、論文に載せることができなかったとしても、査読コメントへの回答で示すことはできるでしょ。レビュワーの方が間違っていて、論文で出したくないような結果を要求されることもゼロではないけど、そういうときには、レビュワーにだけ見せるっていう手を使うこともある。やっぱり困るのはデータがとられてないケースだよね。データがないと、解析結果を示してレビュワーを説得することもできない」
+::: voice-father
+お父さん「そこは柔軟に考えないといけない。計画外の解析結果を、論文に載せることができなかったとしても、査読コメントへの回答で示すことはできるでしょ。レビュワーの方が間違っていて、論文で出したくないような結果を要求されることもゼロではないけど、そういうときには、レビュワーにだけ見せるっていう手を使うこともある。やっぱり困るのはデータがとられてないケースだよね。データがないと、解析結果を示してレビュワーを説得することもできない」
+:::
 
-**私「なんとか対処できるような査読コメントしかこなかったらいいんだけど。でもさ、考えてみたら欠点なんていくらでもあるよね」**
+::: voice-daughter
+私「なんとか対処できるような査読コメントしかこなかったらいいんだけど。でもさ、考えてみたら欠点なんていくらでもあるよね」
+:::
 
+::: voice-father
 お父さん「そう思うのは研究者あるあるだね。対処のしようのない欠点はどの研究にもある。じゃあみんなどうしてるかっていうと、Discussionの研究の限界（study limitations）っていうパラグラフに書くっていうのが、ひとつのやり方だね。たとえば、ストーマ保有者と非保有者を正しく比較できているのかっていう問題があるでしょ。どんな批判がくるか予想するうちに、調整できてない交絡因子を思いついちゃうかもしれない。もしデータをとっているなら、ロジスティック回帰の共変量に入れた方がいいよね。データがないならDiscussionで言い訳しないといけない」
+:::
 
-**私「縁起でもないこといわないでよ」**
+::: voice-daughter
+私「縁起でもないこといわないでよ」
+:::
 
+::: voice-father
 お父さん「まあ研究の限界ってネガティブな話題ではあるけど、きちんと研究の限界について考察しておくと、論文全体の説得力は増すよね」
+:::
 
-**私「そうかもしれないけど」**
+::: voice-daughter
+私「そうかもしれないけど」
+:::
 
+::: voice-father
 お父さん「それにぜったい批判的じゃなきゃだめってこともないと思う。書いているときとは別の視点で、原稿を見直すのは、いい論文を書くために効果的だよ。別人になったつもりで文章を推敲するっていうか」
+:::
 
-**私「別の視点って誰目線よ」**
+::: voice-daughter
+私「別の視点って誰目線よ」
+:::
 
+::: voice-father
 お父さん「たとえば、読者目線でパラグラフをひとつひとつ読む。きっと、読者がもっと説明してほしいところ、逆に冗長で読みにくいところ、そのパラグラフで言いたいことがはっきりしないところがあるはず」
+:::
 
-**私「それはあるかもね。冷静に文章を読み直したら、自分でもなにいってるかわからんってなることあるよね」**
+::: voice-daughter
+私「それはあるかもね。冷静に文章を読み直したら、自分でもなにいってるかわからんってなることあるよね」
+:::
 
+::: voice-father
 お父さん「そうそう、視点を変えるとクールダウンできるって面もあるね。論文の結論についていうと、賛成・反対の読者がそれぞれどう読むか想像してみるっていうのもいい。たとえば外科医にも、開腹手術派と内視鏡手術派がいるっていうじゃない。開腹手術と内視鏡手術を比較するランダム化臨床試験の論文を読んだとき、それぞれの派閥で、読み方が違いそうじゃない？侵襲性のことばかり考察に書いてあると、開腹手術派はいやな顔をしたり。そんなバランスを欠いた議論にならないように、賛成・反対の両方の視点で、原稿を見直すっていうのも、やり方のひとつ。結論が白黒はっきりするような論文では特に有効じゃないかな」
+:::
 
-**私「それもいいかもね。あえて偏った主張をしたいわけじゃないもの」**
+::: voice-daughter
+私「それもいいかもね。あえて偏った主張をしたいわけじゃないもの」
+:::
 
+::: voice-father
 お父さん「じゃあ三つ目のアドバイス。論文本文の書き方について。本文の方が抄録よりずっと長い。本文を一気に書くのは無理だから、小分けにした方がいい。どのくらい小分けにして書くかっていうと、セクション（節）とパラグラフ（段落）を単位にするのがひとつの基準だよ」
+:::
 
 -   セクションとパラグラフごとに書く
 
-**私「パラグラフは英語の授業で習ったやつだよね。セクションはそれをまとめたもの？」**
+::: voice-daughter
+私「パラグラフは英語の授業で習ったやつだよね。セクションはそれをまとめたもの？」
+:::
 
+::: voice-father
 お父さん「うん。論文の章立てには、Introduction、Methods、Results、Discussion、Conclusionsというセクションを使うよね。たとえばIntroductionというセクションを書くことを想像してみて。Introductionには、いくつくらいのパラグラフがありそう？」
+:::
 
-**私「え？えーっと、まず直腸がんについて書くでしょ。就労問題について書いて、ストーマについて説明して、先行研究を挙げて、って考えると、4～5パラグラフくらい？」**
+::: voice-daughter
+私「え？えーっと、まず直腸がんについて書くでしょ。就労問題について書いて、ストーマについて説明して、先行研究を挙げて、って考えると、4～5パラグラフくらい？」
+:::
 
+::: voice-father
 お父さん「それは平均より多いっていわれてる。論文1本あたりの、セクションごとのパラグラフ数の平均（SD）を調べた調査がある。次の表は、1997年1月1日から連続で掲載された50論文を集計したものだよ。ちなみに、この集計が載ってる論文執筆のテキストは、実践的ないい本だよ（Albert 2016）」
+:::
 
 |                | Introduction | Methods    | Results    | Discussion |
 |----------------|--------------|------------|------------|------------|
@@ -243,29 +333,53 @@ a:hover {
 | Pediatr Res    | 2.6（1.3）   | 9.6（3.8） | 6.3（2.9） | 8.5（3.4） |
 | Arch Dis Child | 2.6（1.3）   | 6.5（4.0） | 6.1（4.0） | 6.9（2.8） |
 
+::: voice-father
 お父さん「臨床系のジャーナルに投稿するなら、Introductionは3パラグラフ、MethodsからDiscussionまではそれぞれ7パラグラフが目安かな。もちろん論文の内容にもよるけどね。もし、がんや消化管外科の専門誌に出すなら、直腸がんの細かい説明を省略すれば、Introductionのパラグラフを減らせるかもしれない。たとえば、”Employment of cancer survivors is an emergent problem”っていうような一文から始まって、就労問題について議論していっても不自然ではないでしょ」
+:::
 
-**私「そっちの出だしの方がこなれてる感じがする」**
+::: voice-daughter
+私「そっちの出だしの方がこなれてる感じがする」
+:::
 
+::: voice-father
 お父さん「こんな経験ない？どんな内容にするか考えながら文章を書くと、知らず知らずのうちに無駄に長くなっちゃうこと。そうならないように、パラグラフごとにトピックを明確にしておくといいよ。調査方法とか研究の限界とか、いろいろなトピックがあるけど、それぞれ読者に伝えないといけない情報があるでしょ」
+:::
 
-**私「うん、パラグラフライティングを意識すると、必要十分な情報が把握しやすくなりそう」**
+::: voice-daughter
+私「うん、パラグラフライティングを意識すると、必要十分な情報が把握しやすくなりそう」
+:::
 
+::: voice-father
 お父さん「最後に、論文の構成について話そう。一般的にいうとね。Introductionでは、どのような科学的な背景があってその研究が行われたのか、研究に関わる様々な論拠、研究仮説や研究目的を書く。Methodsは研究方法を、Resultsは結果を書く。Discussionは、研究の意義を説明したり、他の研究と比べたり、研究の限界について述べたりする」
+:::
 
-**私「なんとなくはわかるけどね」**
+::: voice-daughter
+私「なんとなくはわかるけどね」
+:::
 
+::: voice-father
 お父さん「ピアレビューを意識するなら、Methodsで必要な情報を漏らさず丁寧に説明するように、気をつけなさい。さっきいったように、正しい方法論で研究したんだって、わかってもらうことがポイントだからね」
+:::
 
-**私「漏らさず丁寧に？たった7パラグラフしかないのに？」**
+::: voice-daughter
+私「漏らさず丁寧に？たった7パラグラフしかないのに？」
+:::
 
+::: voice-father
 お父さん「そういうことになっちゃう。それに、論文の文字数には投稿規定による上限がある。だから工夫が必要だよね。よくやる手は、ジャーナルのサイトからダウンロードできる付録（supplementary material）に書くってこと。方法や結果の細かい部分は、MethodsやResultsの本文に入らないことがあるからね。あとは、引用文献をうまく利用すると、説明を省略できるかもしれない。引用文献のスタイルは、間違えてると印象が悪いから注意してね」
+:::
 
-**私「なるほど、論文のボリューム感がわかってきた。思ったより、簡潔に、しかも情報を詰め込むように書くんだね。付録とかにできるんなら、どっちかっていうと、ボリュームの制限より、書き忘れがないことに注意しないと」**
+::: voice-daughter
+私「なるほど、論文のボリューム感がわかってきた。思ったより、簡潔に、しかも情報を詰め込むように書くんだね。付録とかにできるんなら、どっちかっていうと、ボリュームの制限より、書き忘れがないことに注意しないと」
+:::
 
+::: voice-father
 お父さん「そうだね。書き忘れ対策としては、医学雑誌編集者国際委員会（ICMJE）という団体が、なにを書かなきゃいけないかリストを用意してくれている（EQUATOR Network 2007）。調査や観察研究の論文を書くときは、観察研究用のSTROBEチェックリストを参考にするといい」
+:::
 
-**私「へー。論文に書くことリストだね。項目をひとつひとつパラグラフにしていけばいいって考えると、気が楽になった。論文書いてみるね」**
+::: voice-daughter
+私「へー。論文に書くことリストだね。項目をひとつひとつパラグラフにしていけばいいって考えると、気が楽になった。論文書いてみるね」
+:::
 
 | Title and abstract \| （a）タイトルまたは抄録のなかで、試験デザインを一般に用いられる用語で明示する
 
@@ -290,30 +404,19 @@ a:hover {
 
 （b）サブグループと交互作用の検証に用いたすべての方法を示す （c）欠測データをどのように扱ったかを説明する （d）該当する場合は、脱落例をどのように扱ったかを説明する （e）あらゆる感度分析の方法を示す \| \| Results 　参加者 \| （a）研究の各段階における人数を示す（例：潜在的な適格者数、適格性が調査された数、適格と確認された数、研究に組入れられた数、フォローアップを完了した数、分析された数）。 （b）各段階での非参加者の理由を示す （c）フローチャートによる記載を考慮する \| \| 　記述的データ \| （a）参加者の特徴（例：人口統計学的、臨床的、社会学的特徴）と曝露や潜在的交絡因子の情報を示す （b）それぞれの変数について、データが欠測した参加者数を記載する （c）追跡期間を平均および合計で要約する \| \| 　アウトカムデータ \| アウトカムのイベント発生数や要約指標の数値を経時的に示す \| \| 　主な結果 \| （a）調整前の推定値と、該当する場合は交絡因子での調整後の推定値、そしてそれらの精度（例：95％信頼区間）を記述する。どの交絡因子が、なぜ調整されたかを明確にする （b）連続変数がカテゴリー化されているときは、カテゴリー境界を報告する （c）意味のある場合は、相対リスクを、意味をもつ期間の絶対リスクに換算することを考慮する \| \| 　他の解析 \| その他に行われたすべての分析（例：サブグループと交互作用の解析や感度分析）の結果を報告する \| \| Discussion 　鍵となる結果 \| 研究目的に関しての鍵となる結果を要約する \| \| 　限界 \| 潜在的なバイアスや精度の問題を考慮して、研究の限界を議論する。潜在的バイアスの方向性と大きさを議論する \| \| 　解釈 \| 目的、限界、解析の多重性、同様の研究で得られた結果やその他の関連するエビデンスを考慮し、慎重で総合的な結果の解釈を記載する \| \| 　一般化可能性 \| 研究結果の一般化可能性（外的妥当性）を議論する \| \| Other information 　研究の財源 \| 潜在的なバイアスや精度の問題を考慮して、研究の限界を議論する。潜在的バイアスの方向性と大きさを議論する \|
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **因果関係に基づく変数の分類**
+::: {.callout-note appearance="simple"  title="因果関係に基づく変数の分類"}
 
-STROBE声明の「変数」というセクションでは、これまで説明してこなかった用語がいくつか用いられています。簡単に定義を述べておきます。
+STROBE声明の「変数」というセクションでは、いくつか基本的で重要な専門用語が出てきます。これまで出てきたものも多いのですが、簡単に振り返っておきます。
 
--   アウトカム（outcome）
+-   アウトカム（outcome）: 因果関係における結果に対応する変数。臨床試験ではエンドポイントという用語を用いる
 
-    因果関係における結果に対応する変数。臨床試験ではエンドポイントという用語を用いる
+-   曝露（exposure）: 因果関係における原因に対応する変数。治療（treatment）のこともある
 
--   曝露（exposure）
+-   予測因子（predictive factor）: アウトカムの予測に用いられる共変量のこと。または、アウトカムと相関する共変量のことで、この場合は予後因子（prognostic factor）と同じ意味になる
 
-    因果関係における原因に対応する変数。治療（treatment）のこともある
+-   交絡因子（confounder）: 因果効果の推定においてバイアスを排除できるような共変量の集合
 
--   予測因子（predictive factor）
-
-    アウトカムの予測に用いられる共変量のこと。または、アウトカムと相関する共変量のことで、この場合は予後因子（prognostic factor）と同じ意味になる
-
--   交絡因子（confounder）
-
-    因果効果の推定においてバイアスを排除できるような共変量の集合
-
--   効果修飾因子（effect modifier）
-
-    因果効果の大きさや方向の違いをもたらす共変量のこと。または、曝露との交互作用がある共変量のこと
+-   効果修飾因子（effect modifier）: 因果効果の大きさや方向の違いをもたらす共変量のこと。または、曝露との交互作用がある共変量のこと
 :::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
@@ -338,52 +441,8 @@ Ministry of Education, Ministry of Health, Labour and Welfare, Ministry of Econo
 \[著者名（苗字+名前のイニシャル）\]. \[記事名\]. \[メディアの種類\]. \[発行年\] \[アクセスした日\] Available from: \[URL\]
 :::
 
-### Continuation of their story
+### エピソード
 
-[Study design I](study-design-1.qmd)
-
-[Study design II](study-design-2.qmd)
-
-[Study design III](study-design-3.qmd)
-
-[Study design IV](study-design-4.qmd)
-
-[Study design V](study-design-5.qmd)
-
-[Clinical trial I](clinical-trial-1.qmd)
-
-[Clinical trial II](clinical-trial-2.qmd)
-
-[Clinical trial III](clinical-trial-3.qmd)
-
-[Epidemiology I](epidemiology-1.qmd)
-
-[Epidemiology II](epidemiology-2.qmd)
-
-[Epidemiology III](epidemiology-3.qmd)
-
-[Epidemiology IV](epidemiology-4.qmd)
-
-[Regression I](logistic-regression-1.qmd)
-
-[Regression II](logistic-regression-2.qmd)
-
-[Regression III](logistic-regression-3.qmd)
-
-[Regression IV](logistic-regression-4.qmd)
-
-[Causal inference I](causal-inference-1.qmd)
-
-[Causal inference II](causal-inference-2.qmd)
-
-[Causal inference III](causal-inference-3.qmd)
-
-[Causal inference IV](causal-inference-4.qmd)
-
-[Publish a paper I](publish-a-paper-1.qmd)
-
-[Publish a paper II](publish-a-paper-2.qmd)
-
-[Publish a paper III](publish-a-paper-3.qmd)
-
-[Publish a paper IV](publish-a-paper-4.qmd)
+- [A Subtle Distinction Between Editors and Reviewers](publish-a-paper-1.html)
+- [Three Tips for Writing a Paper](publish-a-paper-2.html)
+- [A Morning Just Before Submission](publish-a-paper-3.html)
