--- a/jp/causal-inference-3.qmd
+++ b/jp/causal-inference-3.qmd
@@ -316,7 +316,9 @@ Cで条件付けたとき、つまりCを特定の値に固定すると、なに
 
 ![](causal-inference-3-5)
 
-**まとめ**
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="合流点とブロックの関係"}
 
 この表は、原因から結果までのパスを、有向か無向か、合流点をいくつ含んでいるかに従って、4分類して、パスの性質を整理したものです。すでに述べたように、調整するかどうか検討の候補になるのは、原因から結果までの無向パスです。もし、無向パスが**合流点を含まないなら、パス上のどこかの変数を調整しない限り、そのパスはブロックされません**。言い換えると、パス上の変数を調整し、このパスをブロックすることで、バイアスを防ぐことができるかもしれません。無向パスが**合流点を1つ含むとき、調整しなくてもこのパスは合流点でブロックされます**が、**合流点のみを調整すると、ブロックが解けてしまいます**。ただし、非合流点を調整すると、合流点を調整したとしても、そのパスはブロックされます。合流点を1つ以上含む場合も、考え方は同じです。調整していない合流点があるか、非合流点を調整すると、このパスはブロックされます。しかし、すべての合流点のみを調整すると、ブロックが解けてしまいます。
 
