--- a/jp/publish-a-paper-3.qmd
+++ b/jp/publish-a-paper-3.qmd
@@ -174,14 +174,12 @@ a:hover {
 ::: voice-daughter
 そこに置かれた数字も、以前とは違って見える。数字は患者さんになにが起きたか。そして、世界への問いかけへの返事なんだ。私たちはよい診療をしてきたの？問い方が変われば、返ってくる数字も変わる。数字はただ並んでいるだけに見えて、実はたくさんのことを語っている。
 
-患者さんを対象にした研究だからこそ、研究仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより「よりよい技術に近づくための知識を得る」という態度に近い。
+患者さんを対象にした研究だからこそ、研究仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより「よりよい技術に近づくための知識を得る」という態度に近い。仕事をしている時間や、コーヒーを飲んで人と話しているときには通り過ぎてしまうけれど、ひとりになるとそれがよくわかる。
 
 コーヒーは机の端で静かに冷えていた。モニターには、書き上げたばかりのConclusionが映る。調査をデザインしたときに抱いていた疑問に答えられているか、ひとつひとつ確かめる。私は軽く頷き、ゆっくりとキーボードを叩いた。
 :::
 :::::::::::::::::::::::::::::::::
 
-Acknowledgements
-
-We appreciate the advice from an anonymous statistician.
+Acknowledgements ― We appreciate the advice from an anonymous statistician.
 
 ### This concludes the story. 
